--- a/blog/app/views/layouts/application.html.erb
+++ b/blog/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
 	<style type="text/css">
 body
 {
-background-color:#b0c4de;
+background-color:;
 }
 h1 {text-align:center;}
 p {text-align:justify;}
