--- a/blog/app/views/layouts/application.html.erb
+++ b/blog/app/views/layouts/application.html.erb
@@ -2,13 +2,308 @@
 <html>
 <head>
 	<style type="text/css">
-body
-{
-background-color:;
+* {
+	padding: 0;
+	margin: 0;
 }
-h1 {text-align:center;}
-p {text-align:justify;}
-</style>
+
+a {
+	text-decoration: underline;
+	color: #FFF;
+}
+
+a:hover {
+	text-decoration: none;
+}
+
+body {
+	font-size: 11.5pt;
+	line-height: 1.75em;
+	color: #3D3D3D;
+	background: #0D0D0D url(images/bg.jpg) top center no-repeat;
+	letter-spacing: -0.02em;
+}
+
+body,input {
+	font-family: Arial, sans-serif;
+}
+
+br.clearfix {
+	clear: both;
+}
+
+h1,h2,h3,h4 {
+	text-transform: uppercase;
+	letter-spacing: -1px;
+	font-weight: normal;
+}
+
+h2 {
+	font-size: 1.75em;
+}
+
+h2,h3,h4 {
+	color: #FFF;
+	font-family: Oswald, sans-serif;
+	margin-bottom: 1em;
+}
+
+h3 {
+	font-size: 1.5em;
+}
+
+h4 {
+	font-size: 1em;
+}
+
+img.alignleft {
+	margin: 5px 20px 20px 0;
+	float: left;
+}
+
+img.aligntop {
+	margin: 5px 0 20px 0;
+}
+
+p {
+	margin-bottom: 1.5em;
+}
+
+ul {
+	margin-bottom: 1.5em;
+}
+
+ul h4 {
+	margin-bottom: 0.35em;
+}
+
+#content {
+	width: 655px;
+	padding: 0;
+	float: left;
+}
+
+#footer {
+	text-align: center;
+	padding: 40px 0 100px 0;
+	font-size: 0.9em;
+}
+
+#footer a {
+	color: #555;
+}
+
+#header {
+	color: #FFF;
+	position: relative;
+	height: 80px;
+	background: #854646 url(images/bg2.jpg) bottom center no-repeat;
+	width: 910px;
+	padding: 35px;
+}
+
+#logo {
+	position: absolute;
+	top: 60px;
+}
+
+#logo a {
+	color: #FFF;
+	text-decoration: none;
+	text-shadow: 0 1px 1px rgba(0,0,0,0.8);
+}
+
+#logo h1 {
+	font-size: 3em;
+	font-family: Oswald, sans-serif;
+}
+
+#menu {
+	line-height: 60px;
+	font-family: Oswald, sans-serif;
+	padding: 0 35px 0 35px;
+	width: 910px;
+	height: 60px;
+	font-size: 1.2em;
+	background: #854646;
+	text-shadow: 0 1px 1px rgba(0,0,0,0.8);
+}
+
+#menu {
+	text-transform: uppercase;
+	letter-spacing: -1px;
+	color: #FFF;
+}
+
+#menu a {
+	color: #FFF;
+	text-decoration: none;
+}
+
+#menu ul {
+	list-style: none;
+}
+
+#menu ul li {
+	padding: 0 20px 0 20px;
+	height: 60px;
+	display: inline-block;
+}
+
+#menu ul li.first {
+	padding-left: 0;
+}
+
+#menu ul li.active {
+	background: #743737;
+}
+
+#menu .arrow {
+	display: inline-block;
+	margin: 0 0 0 0.5em;
+	position: relative;
+	width: 0;
+	height: 0;
+	top: -3px;
+	border-left: 6px solid transparent;
+	border-right: 6px solid transparent;
+	border-top: 7px solid #492222;
+}
+
+#page {
+	color: #AAA;
+	padding: 60px 35px 25px 35px;
+	margin: 0;
+	width: 910px;
+	position: relative;
+}
+
+#page strong {
+	color: #FFF;
+}
+
+#page .section-list {
+	list-style: none;
+	padding-left: 0;
+}
+
+#page .section-list li {
+	padding: 20px 0 20px 0;
+	clear: both;
+}
+
+#page ul {
+	list-style: none;
+}
+
+#page ul li {
+	padding: 10px 0 10px 0;
+	border-top: dotted 1px #333;
+}
+
+#page ul li.first {
+	padding-top: 0;
+	border-top: 0;
+}
+
+.box {
+	margin: 0 0 30px 0;
+	overflow: hidden;
+}
+
+#col1 {
+	float: left;
+	width: 310px;
+	overflow: hidden;
+}
+
+#col2 {
+	width: 310px;
+	overflow: hidden;
+	margin: 0 0 0 340px;
+}
+
+#search {
+	position: absolute;
+	top: 58px;
+	right: 35px;
+}
+
+#search input.form-text {
+	padding: 8px 42px 8px 12px;
+	width: 175px;
+	border: 0;
+	background: #5B2B2B url(images/search.gif) top right no-repeat;
+	border-top: solid 1px #541C1B;
+	color: #DBBCBC;
+}
+
+#sidebar {
+	width: 225px;
+	margin: 0 0 0 685px;
+	padding: 0;
+}
+
+#splash {
+	height: 180px;
+	position: relative;
+	width: 980px;
+	background: #FFF;
+	overflow: hidden;
+}
+
+#wrapper {
+	width: 980px;
+	position: relative;
+	background: #151515 url(images/bg3.jpg) bottom center no-repeat;
+	margin: 80px auto 0 auto;
+}
+
+.dropotron {
+	min-width: 200px;
+	padding: 20px 15px 20px 15px;
+	background: #743737 url(images/bg4.jpg) top left no-repeat;
+	list-style: none;
+	line-height: 2.75em;
+}
+
+.dropotron li {
+	text-shadow: 0 1px 1px rgba(0,0,0,0.8);
+	color: #F2E6E6;
+	position: relative;
+	border-top: dotted 1px #9f6262;
+	padding: 0 20px 0 20px;
+}
+
+.dropotron li:hover {
+	background: #5B2B2B;
+}
+
+.dropotron li.first {
+	border-top: 0;
+}
+
+.dropotron li.last {
+	border-bottom: 0;
+}
+
+.dropotron li a {
+	color: #F2E6E6;
+	text-decoration: none;
+}
+
+.dropotron .arrow {
+	display: inline-block;
+	margin: 0 0 0 0.5em;
+	position: absolute;
+	right: 15px;
+	top: 15px;
+	width: 0;
+	height: 0;
+	border-top: 6px solid transparent;
+	border-bottom: 6px solid transparent;
+	border-left: 7px solid #391212;
+}
   <title>Blog</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
